Stable Core Server