@@ -17,6 +17,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+	<packaging>jar</packaging>
 
 	<dependencies>
 		<dependency>
@@ -76,6 +77,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+    				<testFailureIgnore>true</testFailureIgnore>
+    				<forkCount>3</forkCount>
+    				<reuseForks>true</reuseForks>
+    				<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+  				</configuration>
 			</plugin>
 		</plugins>
 	</build>
